fix nav spacing on tablet and cleanup

--- a/src/components/BurgerButton/BurgerButton.module.scss
+++ b/src/components/BurgerButton/BurgerButton.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    @include breakpoint(xs) {
+    @include breakpoint($mobile-breakpoint) {
         display: none;
     }
 }
