--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,5 +9,5 @@ $teal: #6FFFE9;
 $header-height: 4em;
 $header-height-scrolled: 3em;
 $header-transition: all ease-in-out 0.3s;
-
+$mobile-breakpoint: 'sm';
 $logo-scale: 0.37;
